CI Updates for windows build and normalizing