@@ -67,9 +67,9 @@ application {
 }
 
 ext {
-    mmJvmOptions = ['-Xmx2048m', '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED']
+    mmJvmOptions = ['-Xmx2048m']
     mmlJvmOptions = ['-Xmx1024m']
-    mhqJvmOptions = ['-Xmx2048m', '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED']
+    mhqJvmOptions = ['-Xmx2048m']
     campaigns = 'campaigns'
     data = 'data'
     docs = 'docs'
@@ -83,7 +83,6 @@ ext {
     mmRepoDir = "${buildDir}/repo/megamek"
     mmlRepoDir = "${buildDir}/repo/megameklab"
     mhqRepoDir = "${buildDir}/repo/mekhq"
-    mavenPublishDir = "${buildDir}/mavenrepo"
     scriptsDir = "${projectDir}/scripts"
     scriptTemplate = "${scriptsDir}/startScriptTemplate.txt"
 }
@@ -113,27 +112,6 @@ task mmJar (type: Jar) {
     outputs.file jarLocation
 }
 
-task mmJarLibDir (type: Jar) {
-    description = 'Builds a MegaMek jar from the current source, with dependencies on the classpath in the same directory'
-
-    archiveFileName = "MegaMek.jar"
-
-    from "${mmDir}/megamek/build/classes/java/main"
-    from "${mmDir}/megamek/build/resources/main"
-    manifest {
-        attributes "Main-Class" : 'megamek.MegaMek'
-        attributes "Class-Path" : project.sourceSets.main.runtimeClasspath.files
-                .findAll { it.name.endsWith(".jar") && !it.name.toLowerCase().startsWith("megamek") }
-                .collect { it.name }.join(' ')
-        attributes "Add-Opens" : 'java.base/java.util java.base/java.util.concurrent'
-        attributes "Build-Date" : LocalDateTime.now()
-    }
-    ext.jarLocation = "${buildDir}/libs/${archiveFileName.get()}"
-    inputs.dir "${mmDir}/build/classes/java/main"
-    inputs.dir "${mmDir}/build/resources/main"
-    outputs.file jarLocation
-}
-
 task mmlJar (type: Jar) {
     archiveFileName = "MegaMekLab.jar"
     dependsOn gradle.includedBuild('megameklab').task(':megameklab:compileTestJava')
@@ -155,6 +133,7 @@ task mmlJar (type: Jar) {
 
 jar {
     archiveFileName = "MekHQ.jar"
+
     manifest {
         attributes "Main-Class" : application.mainClass
         attributes "Class-Path" : "${mmJar.archiveFileName.get()} ${mmlJar.archiveFileName.get()} " + (project.sourceSets.main.runtimeClasspath.files
@@ -216,7 +195,7 @@ task stageFiles(type: Copy) {
 task createStartScripts (type: CreateStartScripts) {
     description = 'Create shell script for generic distribution.'
     applicationName = 'mhq'
-    mainClass = project.mainClassName
+    mainClass = application.mainClass
     outputDir = startScripts.outputDir
     classpath = jar.outputs.files + files(project.sourceSets.main.runtimeClasspath.files)
             .filter { it.name.endsWith(".jar") }
@@ -238,7 +217,7 @@ task createStartScripts (type: CreateStartScripts) {
 distributions {
     // Creates tasks which package distribution with MM jar and startup script in root directory
     unix {
-       distributionBaseName = 'mekhq'
+       distributionBaseName = 'mekhq-unix'
         contents {
             from ("${mmDir}/megamek/build/files")
             from ("${mmDir}/megamek/build/scripts") {
@@ -330,6 +309,7 @@ distributions {
             from (mmlJar) {
                 into "${lib}"
             }
+            from(jar)
             duplicatesStrategy = 'exclude'
         }
     }
@@ -337,55 +317,73 @@ distributions {
 
 createExe {
     description = 'Create Windows executable that wraps MekHQ jar'
-    mainClassName = project.mainClassName
-    jarTask = project.tasks.jar
+    mainClassName = application.mainClass
+    outfile = 'MekHQ.exe'
+    def iniFile = 'MekHQ.l4j.ini'
     icon = "${projectDir}/${data}/images/misc/mekhq.ico"
+    jarTask = project.tasks.jar
     internalName = 'MekHQ'
-    downloadUrl = 'https://adoptium.net/temurin/releases/?os=windows&arch=x64'
+    downloadUrl = 'https://github.com/MegaMek/megamek/wiki/Updating-to-Adoptium'
     supportUrl = 'https://megamek.org'
     copyright = '2024 MegaMek Development Team'
     companyName = "MegaMek Development Team"
-    jvmOptions = project.ext.mmlJvmOptions
+    outputs.file "${buildDir}/launch4j/${outfile}"
+    outputs.file "${buildDir}/launch4j/${iniFile}"
+    jvmOptions = project.ext.mhqJvmOptions
     jreMinVersion = '17'
     messagesJreNotFoundError = 'Go here for instructions on installing the correct version of Java: https://github.com/MegaMek/megamek/wiki/Updating-to-Adoptium'
     classpath = ["lib/${mmJar.archiveFileName.get()}", "lib/${mmlJar.archiveFileName.get()}"] + project.sourceSets.main.runtimeClasspath.files
             .findAll { it.name.endsWith(".jar") && !it.name.toLowerCase().startsWith("megamek")}
             .collect { "${lib}/${it.name}" }
-    outputs.file "${buildDir}/launch4j/${outfile}"
+    doLast {
+        new File("${buildDir}/launch4j/${iniFile}").text = """# Launch4j runtime config
+# you can add arguments here that will be processed by the JVM at runtime
+${project.ext.mhqJvmOptions.join('\n')}
+"""
+    }
 }
 
 task createMMExe (type: Launch4jLibraryTask, dependsOn: mmJar) {
     description = 'Create Windows executable stub for MM jar'
-    outfile = 'MegaMek.exe'
     mainClassName = 'megamek.MegaMek'
-    jarTask = project.tasks.mmJar
-    classpath = project.sourceSets.main.runtimeClasspath.files
-            .findAll { it.name.endsWith(".jar") && !it.name.toLowerCase().startsWith("megamek")}
-            .collect { "${lib}/${it.name}" }
+    outfile = 'MegaMek.exe'
+    def iniFile = 'MegaMek.l4j.ini'
     icon = "${mmDir}/megamek/${data}/images/misc/megamek.ico"
+    jarTask = project.tasks.mmJar
     internalName = 'MegaMek'
-    downloadUrl = 'https://adoptium.net/temurin/releases/?os=windows&arch=x64'
+    downloadUrl = 'https://github.com/MegaMek/megamek/wiki/Updating-to-Adoptium'
     supportUrl = 'https://megamek.org'
     copyright = '2024 MegaMek Development Team'
     companyName = "MegaMek Development Team"
-    jvmOptions = project.ext.mmlJvmOptions
+    outputs.file "${buildDir}/launch4j/${outfile}"
+    outputs.file "${buildDir}/launch4j/${iniFile}"
+    classpath = project.sourceSets.main.runtimeClasspath.files
+            .findAll { it.name.endsWith(".jar") && !it.name.toLowerCase().startsWith("megamek")}
+            .collect { "${lib}/${it.name}" }
+    jvmOptions = project.ext.mmJvmOptions
     jreMinVersion = '17'
     messagesJreNotFoundError = 'Go here for instructions on installing the correct version of Java: https://github.com/MegaMek/megamek/wiki/Updating-to-Adoptium'
     dontWrapJar = true
-    outputs.file "${buildDir}/launch4j/${outfile}"
+    doLast {
+        new File("${buildDir}/launch4j/${iniFile}").text = """# Launch4j runtime config
+# you can add arguments here that will be processed by the JVM at runtime
+${project.ext.mmJvmOptions.join('\n')}
+"""
+    }
 }
 
 task createMMLExe (type: Launch4jLibraryTask, dependsOn: mmlJar) {
     description = 'Create Windows executable stub for MML jar'
-    outfile = 'MegaMekLab.exe'
     mainClassName = 'megameklab.MegaMekLab'
+    outfile = 'MegaMekLab.exe'
+    def iniFile = 'MegaMekLab.l4j.ini'
     jarTask = project.tasks.mmlJar
     classpath = ["lib/${mmJar.archiveFileName.get()}"] + project.sourceSets.main.runtimeClasspath.files
             .findAll { it.name.endsWith(".jar") && !it.name.toLowerCase().startsWith("megamek")}
             .collect { "${lib}/${it.name}" }
     icon = "${mmlDir}/megameklab/${data}/images/misc/megameklab.ico"
     internalName = 'MegaMekLab'
-    downloadUrl = 'https://adoptium.net/temurin/releases/?os=windows&arch=x64'
+    downloadUrl = 'https://github.com/MegaMek/megamek/wiki/Updating-to-Adoptium'
     supportUrl = 'https://megamek.org'
     copyright = '2024 MegaMek Development Team'
     companyName = "MegaMek Development Team"
@@ -394,10 +392,17 @@ task createMMLExe (type: Launch4jLibraryTask, dependsOn: mmlJar) {
     messagesJreNotFoundError = 'Go here for instructions on installing the correct version of Java: https://github.com/MegaMek/megamek/wiki/Updating-to-Adoptium'
     dontWrapJar = true
     outputs.file "${buildDir}/launch4j/${outfile}"
+    outputs.file "${buildDir}/launch4j/${iniFile}"
+    doLast {
+        new File("${buildDir}/launch4j/${iniFile}").text = """# Launch4j runtime config
+# you can add arguments here that will be processed by the JVM at runtime
+${project.ext.mmlJvmOptions.join('\n')}
+"""
+    }
 }
 
 task stageMM (type: GradleBuild) {
-    description = 'Prepares files from the MegaMek project'
+    description = 'Prepares files from the MegaMek and MegaMekLab projects'
     group = 'distribution'
 
     dependsOn gradle.includedBuild('megamek').task(':megamek:stageFiles')
@@ -408,19 +413,10 @@ task stageMM (type: GradleBuild) {
     dir = "${mmDir}"
 }
 
-task stageMML (type: GradleBuild) {
-    description = 'Prepares files from the MegaMekLab project'
-    group = 'distribution'
-
-
-    dir = "${mmlDir}"
-}
-
 windowsDistZip {
     description = 'Creates Windows distribution packaged as a zip archive'
     dependsOn stageFiles
     dependsOn stageMM
-//    dependsOn stageMML
     dependsOn createExe
     dependsOn createMMExe
     dependsOn createMMLExe
@@ -431,7 +427,6 @@ windowsDistTar {
     description = 'Creates Windows distribution packaged as a zip archive'
     dependsOn stageFiles
     dependsOn stageMM
-//    dependsOn stageMML
     dependsOn createExe
     dependsOn createMMExe
     dependsOn createMMLExe
@@ -444,7 +439,6 @@ unixDistTar {
     description = 'Creates *nix distribution packaged as a tar ball'
     dependsOn stageFiles
     dependsOn stageMM
-//    dependsOn stageMML
     dependsOn startScripts
     archiveExtension = 'tar.gz'
     compression = Compression.GZIP
@@ -454,7 +448,6 @@ unixDistZip {
     description = 'Creates *nix distribution packaged as a tar ball'
     dependsOn stageFiles
     dependsOn stageMM
-//    dependsOn stageMML
     dependsOn createStartScripts
     dependsOn startScripts
 }
@@ -463,7 +456,6 @@ distTar {
     description = 'Creates *nix distribution packaged as a tar ball'
     dependsOn stageFiles
     dependsOn stageMM
-//    dependsOn stageMML
     dependsOn createStartScripts
     dependsOn startScripts
     archiveExtension = 'tar.gz'
@@ -474,7 +466,6 @@ distZip {
     description = 'Creates *nix distribution packaged as a tar ball'
     dependsOn stageFiles
     dependsOn stageMM
-    // dependsOn stageMML
     dependsOn createStartScripts
     dependsOn startScripts
 }
@@ -547,7 +538,6 @@ task assembleDist(overwrite: true) {
     description = 'Build unix, Windows, and source packages'
     group = 'distribution'
     dependsOn stageMM
-    dependsOn stageMML
     dependsOn test
     dependsOn unixDistTar
     dependsOn windowsDistZip
@@ -650,19 +640,7 @@ publishing {
             }
         }
     }
-
-    repositories {
-        maven {
-            url uri(mavenPublishDir)
-        }
-    }
 }
-
-task cleanPublishingDir (type: Delete) {
-    delete = mavenPublishDir
-}
-
-publishPublishMMLibraryPublicationToMavenRepository.dependsOn cleanPublishingDir
 
 test {
     useJUnitPlatform()
